[#21] Wrap text/images correctly in monster artifact header
Text and images now wrap correctly in the monster artifact header.

--- a/gmm.css
+++ b/gmm.css
@@ -455,19 +455,26 @@
   padding: 2px; }
   .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header {
     display: grid;
-    grid-template-columns: 97px 1fr;
-    grid-column-gap: 0.5rem; }
+    grid-template-columns: auto 1fr;
+    grid-column-gap: 0.5rem;
+    overflow: hidden; }
     .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__image {
       grid-row: 1 / span 3;
       grid-column: 1;
-      position: relative; }
+      position: relative;
+      height: 97px;
+      width: 97px;
+      display: flex;
+      justify-content: center;
+      background: var(--color-primary-shade-3);
+      border-radius: 0.75rem; }
       .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__image[data-action="open-config"]:hover {
         outline: 2px solid; }
       .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__image img {
-        background: var(--color-primary-shade-3);
-        border-radius: 0.75rem;
         border: none;
-        display: block; }
+        display: block;
+        max-height: 100%;
+        max-width: 100%; }
     .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__name {
       font-size: 2.5rem;
       letter-spacing: 0.5px;
@@ -490,12 +497,16 @@
       font-size: larger;
       border-top: 1px solid var(--color-primary-shade-4);
       margin: 0.25rem 0 0;
-      padding: 0.25rem 0 0; }
+      padding: 0.25rem 1rem 0 0;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 100%;
+      text-overflow: ellipsis; }
       .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__combat .level,
       .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__combat .rank,
       .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__combat .role,
       .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__combat .phase {
-        display: inline-block; }
+        display: inline; }
         .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__combat .level i,
         .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__combat .rank i,
         .gmm-artifact.artifact--monster.artifact--monster--vanity .monster__header .monster__combat .role i,
