--- a/stylesheets/components/_artifact--monster.scss
+++ b/stylesheets/components/_artifact--monster.scss
@@ -8,23 +8,30 @@
 
 		.monster__header {
 			display: grid;
-			grid-template-columns: 97px 1fr;
+			grid-template-columns: auto 1fr;
 			grid-column-gap: 0.5rem;
+			overflow: hidden;
 
 			.monster__image {
 				grid-row: 1 / span 3;
 				grid-column: 1;
 				position: relative;
+				height: 97px;
+				width: 97px;
+				display: flex;
+				justify-content: center;
+				background: var(--color-primary-shade-3);
+				border-radius: 0.75rem;
 
 				&[data-action="open-config"]:hover {
 					outline: 2px solid;
 				}
 
 				img {
-					background: var(--color-primary-shade-3);
-					border-radius: 0.75rem;
 					border: none;
 					display: block;
+					max-height: 100%;
+					max-width: 100%;
 				}
 			}
 
@@ -56,13 +63,17 @@
 				font-size: larger;
 				border-top: 1px solid var(--color-primary-shade-4);
 				margin: 0.25rem 0 0;
-				padding: 0.25rem 0 0;
+				padding: 0.25rem 1rem 0 0;
+				white-space: nowrap;
+				overflow: hidden;
+				width: 100%;
+				text-overflow: ellipsis;
 
 				.level,
 				.rank,
 				.role,
 				.phase {
-					display: inline-block;
+					display: inline;
 
 					i {
 						margin-right: 0.25rem;
